# streamly-examples

./: .gitignore  .hlint.ignore  .packcheck.ignore  .travis.yml  Cargo.toml  Changelog.md  CmdClient.hs  CmdServer.hs  Examples.hs  LICENSE  Makefile  NOTICE  README.md  TrafficRouter.hs  WordClassifier.hs  WordCount.hs  appveyor.yml  cabal.project  cabal.project.Werror  cabal.project.ci  default.nix  flake.nix  hie.yaml  packages.nix  sources.nix  stack.yaml  streamly-examples.cabal
.circleci/: config.yml
.github/workflows/: haskell.yml
examples/: AcidRain.hs  BasicDirStream.hsc  BytePairEncoder.hs  CSVParser.hs  CamelCase.hs  CirclingSquare.hs  CmdClient.hs  CmdServer.hs  ControlFlow.hs  CoreUtils.hs  CoreUtilsHandle.hs  DateTimeParser.hs  EchoClient.hs  EchoServer.hs  Examples.hs  FileIOExamples.hs  FileSender.hs  FileSinkServer.hs  FileSystemEvent.hs  FromFileClient.hs  HandleIO.hs  Intro.hs  ListDir.c  ListDir.hs  ListDirBasic.c  ListDirBasic.hs  ListDirBasic.rs  ListDirNaive.hs  ListDirOsPath.hs  LogParser.hs  MergeServer.hs  MergeSort.hs  Naive.hs  NaiveDS.hs  NaiveDirStream.hsc  NaiveOsPath.hs  Rate.hs  SearchQuery.hs  Split.hs  StringSearch.hs  (+11 more)
examples/Interop/: Conduit.hs  Pipes.hs  Streaming.hs  Vector.hs
