cabal-version: 2.2
name:          streamly-examples
category:      Streaming, Streamly
version:       0.1.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Harendra Kumar
maintainer:    Harendra Kumar
stability:     provisional
homepage:      http://github.com/composewell/streamly-examples
bug-reports:   http://github.com/composewell/streamly-examples/issues
copyright:     Copyright (c) 2019 Composewell Technologies
synopsis:      Examples for streamly
description:   Examples for streamly

tested-with: GHC==8.8.1
build-type:    Simple
extra-source-files:

source-repository head
  type: git
  location: git://github.com/composewell/streamly-examples.git

------------------------------------------------------------------------------
-- Flags                                                                    --
------------------------------------------------------------------------------

flag fusion-plugin
  description: Use fusion plugin for benchmarks and executables
  manual: True
  default: False

flag examples-sdl
  description: Build including SDL examples
  manual: True
  default: False

------------------------------------------------------------------------------
-- Common Stanzas                                                           --
------------------------------------------------------------------------------

common exe-dependencies
  build-depends:
      streamly
    , base                  >= 4.9   && < 5
    , directory         	  >= 1.2   && < 1.4
    , transformers      	  >= 0.4   && < 0.6
    , containers        	  >= 0.5   && < 0.7
    , http-conduit      	  >= 2.2.2 && < 2.4
    , random            	  >= 1.0.0 && < 2
    , exceptions        	  >= 0.8   && < 0.11
    , transformers-base 	  >= 0.4   && < 0.5
    , network           	  >= 2.6   && < 4
    , hashable              >= 1.2   && < 1.4
    , unordered-containers  >= 0.2   && < 0.3
    , vector                >= 0.12  && < 0.13
    , mtl                   >= 2.2   && < 3

common exe-options
  import: exe-dependencies
  default-language: Haskell2010
  hs-source-dirs:   examples

  ghc-options: -O2
               -fdicts-strict
               -fspec-constr-recursive=16
               -fmax-worker-args=16
               -threaded
               -with-rtsopts=-N

               -Wall
               -Wcompat
               -Wunrecognised-warning-flags
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -Wnoncanonical-monad-instances

  if flag(fusion-plugin) && !impl(ghcjs) && !impl(ghc < 8.6)
    ghc-options: -fplugin Fusion.Plugin
    build-depends:
        fusion-plugin     >= 0.2   && < 0.3

  if os(darwin)
      cpp-options:    -DCABAL_OS_DARWIN

  if os(linux)
      cpp-options:    -DCABAL_OS_LINUX

  if os(windows)
      cpp-options:    -DCABAL_OS_WINDOWS

------------------------------------------------------------------------------
-- Examples                                                                 --
------------------------------------------------------------------------------

executable Examples
  import: exe-options
  default-extensions: OverloadedStrings
  main-is: Examples.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable CmdServer
  import: exe-options
  default-extensions: OverloadedStrings
  main-is: CmdServer.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable CmdClient
  import: exe-options
  default-extensions: OverloadedStrings
  main-is: CmdClient.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable SearchQuery
  import: exe-options
  main-is: SearchQuery.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable ListDir
  import: exe-options
  main-is: ListDir.hs
  buildable: True

executable MergeSort
  import: exe-options
  main-is: MergeSort.hs
  buildable: True

executable AcidRain
  import: exe-options
  main-is: AcidRain.hs
  buildable: True

executable CirclingSquare
  import: exe-options
  main-is: CirclingSquare.hs
  if flag(examples-sdl)
    buildable: True
    build-Depends:
        SDL  >= 0.6.5 && < 0.7
  else
    buildable: False

executable ControlFlow
  import: exe-options
  main-is: ControlFlow.hs
  buildable: True

executable HandleIO
  import: exe-options
  main-is: HandleIO.hs
  buildable: True

executable FileIOExamples
  import: exe-options
  main-is: FileIOExamples.hs
  buildable: True

executable EchoServer
  import: exe-options
  main-is: EchoServer.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable FileSinkServer
  import: exe-options
  main-is: FileSinkServer.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable FromFileClient
  import: exe-options
  main-is: FromFileClient.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable WordClassifier
  import: exe-options
  main-is: WordClassifier.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable WordCount
  import: exe-options
  main-is: WordCount.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable CamelCase
  import: exe-options
  main-is: CamelCase.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable Rate
  import: exe-options
  main-is: Rate.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable Split
  import: exe-options
  main-is: Split.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable FileSystemEvent
  import: exe-options
  main-is: FileSystemEvent.hs
  buildable: True
