cabal-version: 2.2
name:          streamly-examples
category:      Streaming, Streamly
version:       0.1.0
license:       Apache-2.0
license-file:  LICENSE
author:        Composewell Technologies
maintainer:    streamly@composewell.com
stability:     provisional
homepage:      http://github.com/composewell/streamly-examples
bug-reports:   http://github.com/composewell/streamly-examples/issues
copyright:     Copyright (c) 2019 Composewell Technologies
synopsis:      Examples for streamly
description:   Examples for streamly

tested-with: GHC==8.8.1
build-type:    Simple
extra-source-files:
  .circleci/config.yml
  .github/workflows/haskell.yml
  appveyor.yml
  README.md
  NOTICE

source-repository head
  type: git
  location: git://github.com/composewell/streamly-examples.git

------------------------------------------------------------------------------
-- Flags                                                                    --
------------------------------------------------------------------------------

flag fusion-plugin
  description: Use fusion plugin for benchmarks and executables
  manual: True
  default: False

flag examples-sdl
  description: Build including SDL examples
  manual: True
  default: False

------------------------------------------------------------------------------
-- Common Stanzas                                                           --
------------------------------------------------------------------------------

common exe-dependencies
  build-depends:
      streamly
    , base                  >= 4.9   && < 5
    , directory             >= 1.2   && < 1.4
    , transformers          >= 0.4   && < 0.6
    , containers            >= 0.5   && < 0.7
    , http-conduit          >= 2.2.2 && < 2.4
    , random                >= 1.0.0 && < 2
    , exceptions            >= 0.8   && < 0.11
    , transformers-base     >= 0.4   && < 0.5
    , network               >= 2.6   && < 4
    , hashable              >= 1.2   && < 1.4
    , unordered-containers  >= 0.2   && < 0.3
    , vector                >= 0.12  && < 0.13
    , mtl                   >= 2.2   && < 3

common exe-options
  import: exe-dependencies
  default-language: Haskell2010
  hs-source-dirs:   examples

  ghc-options: -O2
               -fdicts-strict
               -fspec-constr-recursive=16
               -fmax-worker-args=16

               -Wall
               -Wcompat
               -Wunrecognised-warning-flags
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -Wnoncanonical-monad-instances

  if flag(fusion-plugin) && !impl(ghcjs) && !impl(ghc < 8.6)
    ghc-options: -fplugin Fusion.Plugin
    build-depends:
        fusion-plugin     >= 0.2   && < 0.3

common exe-options-threaded
  import: exe-options
  ghc-options: -threaded
               -with-rtsopts=-N

------------------------------------------------------------------------------
-- Examples                                                                 --
------------------------------------------------------------------------------

executable Examples
  import: exe-options-threaded
  main-is: Examples.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable CmdServer
  import: exe-options-threaded
  main-is: CmdServer.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable CmdClient
  import: exe-options-threaded
  main-is: CmdClient.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable SearchQuery
  import: exe-options-threaded
  main-is: SearchQuery.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable ListDir
  import: exe-options-threaded
  main-is: ListDir.hs

executable MergeSort
  import: exe-options-threaded
  main-is: MergeSort.hs

executable AcidRain
  import: exe-options-threaded
  main-is: AcidRain.hs

executable CirclingSquare
  import: exe-options-threaded
  main-is: CirclingSquare.hs
  if flag(examples-sdl)
    buildable: True
    build-Depends:
        SDL  >= 0.6.5 && < 0.7
  else
    buildable: False

executable ControlFlow
  import: exe-options
  main-is: ControlFlow.hs

executable HandleIO
  import: exe-options
  main-is: HandleIO.hs

executable FileIOExamples
  import: exe-options
  main-is: FileIOExamples.hs

executable EchoServer
  import: exe-options-threaded
  main-is: EchoServer.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable FileSinkServer
  import: exe-options-threaded
  main-is: FileSinkServer.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable FromFileClient
  import: exe-options-threaded
  main-is: FromFileClient.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable WordClassifier
  import: exe-options
  main-is: WordClassifier.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable WordCount
  import: exe-options
  main-is: WordCount.hs
  ghc-options: -main-is WordCount
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable WordCountParallel
  import: exe-options-threaded
  main-is: WordCountParallel.hs
  other-modules: WordCount
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable WordCountModular
  import: exe-options
  main-is: WordCountModular.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable WordCountUTF8
  import: exe-options-threaded
  main-is: WordCountUTF8.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable CamelCase
  import: exe-options
  main-is: CamelCase.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable Rate
  import: exe-options-threaded
  main-is: Rate.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable Split
  import: exe-options
  main-is: Split.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False

executable FileSystemEvent
  import: exe-options-threaded
  main-is: FileSystemEvent.hs
  if !impl(ghcjs)
    buildable: True
  else
    buildable: False
